style: quicktools & openFileList

--- a/src/styles/components/quicktools.scss
+++ b/src/styles/components/quicktools.scss
@@ -1,20 +1,24 @@
+@use "../utils/variables" as *;
+
 #quicktools-toggler {
-  border-radius: 1rem;
+  color: var(--bui-bg-foreground);
+  background-color: var(--bui-bg);
+  border-radius: $radius-2xl;
+  border-color: var(--bui-bg-muted);
   box-shadow: 0 0 0;
-  border-color: var(--border-color);
 }
 
 #quick-tools {
-  border: 0.1rem solid var(--border-color);
+  border: $border-sm solid var(--bui-bg-muted);
   border-bottom: 0 !important;
-  border-top-left-radius: 1rem !important;
-  border-top-right-radius: 1rem !important;
+  border-top-left-radius: $radius-2xl !important;
+  border-top-right-radius: $radius-2xl !important;
   box-shadow: 0 0 0;
 
   #row1,
   #row1 .section:nth-child(1) {
-    border-top-left-radius: 1rem !important;
-    border-top-right-radius: 1rem !important;
+    border-top-left-radius: $radius-2xl !important;
+    border-top-right-radius: $radius-2xl !important;
   }
 }
 
@@ -31,23 +35,26 @@
   }
 
   .open-file-list {
-    border-top: 1px solid var(--border-color);
+    border-top: $border-xs solid var(--bui-bg-muted);
   }
 }
 
 .open-file-list {
-  background-color: var(--secondary-color);
-  border-bottom: 1px solid var(--border-color);
+  background-color: var(--bui-bg-secondary);
+  border-bottom: $border-xs solid var(--bui-bg-muted);
   box-shadow: 0 0 0 !important;
 
   .tile {
-    background-color: color-mix(in srgb, var(--primary-color) 40%, transparent);
+    background-color: inherit !important;
     border: 0 !important;
-    border: 1px solid transparent !important;
+    padding: 0 $u-2xs !important;
+
+    .file {
+      padding: 0 !important;
+    }
 
     &.active {
-      border: 1px solid var(--border-color) !important;
-      background: var(--primary-color) !important;
+      background: var(--bui-bg) !important;
     }
   }
 }
