style: file browser

--- a/src/styles/pages/fileBrowser.scss
+++ b/src/styles/pages/fileBrowser.scss
@@ -25,6 +25,7 @@
 
       &::after {
         padding: 0 0.5rem;
+        border-radius: .25rem;
         background: var(--primary-color) !important;
       }
 
