--- a/src/styles/pages/sidebar.scss
+++ b/src/styles/pages/sidebar.scss
@@ -21,14 +21,19 @@ $sidebar-app-border-radius: 0.5rem;
   }
 
   .apps {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background-color: var(--secondary-color) !important;
     color: var(--secondary-text-color) !important;
     width: $sidebar-apps-width;
     padding: 1rem 0;
-    gap: 1rem;
+
+    .app-icons-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0;
+      width: 100%;
+      gap: .5rem;
+    }
 
     .icon {
       display: flex;
@@ -44,6 +49,10 @@ $sidebar-app-border-radius: 0.5rem;
         @include m.active-state;
       }
     }
+
+    .avatar {
+      border: 1px solid var(--border-color);
+    }
   }
 
   .container {
@@ -54,6 +63,7 @@ $sidebar-app-border-radius: 0.5rem;
     margin: 0 !important;
     background: var(--primary-color) !important;
     color: var(--primary-text-color) !important;
+    box-sizing: border-box;
 
     &.search-in-files {
       width: 100% !important;
@@ -118,10 +128,10 @@ $sidebar-app-border-radius: 0.5rem;
 
     &.extensions {
       .header {
+        box-sizing: border-box;
+        width: 100%;
+        padding: 0 1rem;
         gap: 0.5rem;
-        width: 90%;
-        padding: 0;
-        margin: 0;
 
         input {
           width: 100% !important;
@@ -129,10 +139,34 @@ $sidebar-app-border-radius: 0.5rem;
           padding-left: 0.5rem !important;
         }
 
-        .title {
+        /*.title {
           width: 100%;
           justify-content: space-between;
           padding: 0 0.5rem;
+        }*/
+
+        .title {
+          display: flex !important;
+          align-items: center !important;
+          // justify-content: space-between !important;
+
+          span:first-of-type {
+            flex-shrink: 0 !important;
+          }
+
+          button.icon-button:first-of-type {
+            margin-left: auto;
+          }
+
+          .icon-button {
+            display: flex !important;
+            align-items: center !important;
+            gap: 0.5rem !important;
+
+            &:not(:first-of-type) {
+              margin-left: 0.5rem !important;
+            }
+          }
         }
       }
 
@@ -206,6 +240,35 @@ $sidebar-app-border-radius: 0.5rem;
 
         strong {
           color: var(--active-color);
+        }
+      }
+    }
+    
+    &.notifications {
+      .header {
+        box-sizing: border-box;
+        width: 100%;
+        padding: .5rem 1rem;
+        gap: 0.5rem;
+
+        .title {
+          display: flex !important;
+          align-items: center !important;
+          font-size: 1.15rem;
+
+          .icon:first-of-type {
+            margin-left: auto;
+          }
+
+          .icon {
+            display: flex !important;
+            align-items: center !important;
+            gap: 0.5rem !important;
+
+            &:not(:first-of-type) {
+              margin-left: 0.5rem !important;
+            }
+          }
         }
       }
     }
