--- a/src/styles/components/dialog.scss
+++ b/src/styles/components/dialog.scss
@@ -1,3 +1,5 @@
+@use '../utils/mixin' as m;
+
 :root {
   --popup-background-color: var(--primary-color);
 }
@@ -33,8 +35,9 @@
 
       &:hover,
       &:active {
+        @include m.active-state(--primary-color);
         background: var(--secondary-color) !important;
-        border: 1px solid var(--active-color) !important;
+        // border: 1px solid var(--active-color) !important;
       }
     }
   }
