--- a/src/styles/pages/settings.scss
+++ b/src/styles/pages/settings.scss
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
+    padding: 1rem 0.75rem !important;
     max-width: 100%;
     gap: 0.5rem;
     box-sizing: border-box;
